@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/async/async-0.6.1.ebuild,v 1.1 2011/08/27 20:11:03 neurogeek Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/async/async-0.6.1.ebuild,v 1.2 2011/08/27 20:55:38 neurogeek Exp $
 # Ebuild generated by g-pypi 0.1
 
 EAPI="3"
@@ -17,7 +17,7 @@ HOMEPAGE="http://gitorious.org/git-python/async
 SRC_URI="mirror://pypi/${P:0:1}/${PN}/${P}.tar.gz"
 
 LICENSE="BSD"
-KEYWORDS="~x86"
+KEYWORDS="~amd64 ~x86"
 SLOT="0"
 IUSE=""
 
