@@ -1,6 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST GitPython-0.1.7.tar.gz 18087 RMD160 5733cd63b86bb69130cfc634835b5fc7c8a9182b SHA1 bdd93f4855420815724ca847a61e913119ae418e SHA256 03754bc7b256397c1b646e5048e2291590f5080171adb8b00f4e2d7384c76eee
 DIST GitPython-0.3.2.RC1.tar.gz 313486 RMD160 75488dcfe0be35066cd39eb63f909f999f17cdda SHA1 b9f43c91452f3fe7e105ac54ce878ff20ea44f44 SHA256 fd6786684a0d0dd7ebb961da754e3312fafe0c8e88f55ceb09858aa0af6094e0
 EBUILD git-python-0.1.7.ebuild 786 RMD160 d73459d158ef1dc31555726150c92176d829c6a8 SHA1 d86380906b83fd7c972fba089b455d5596ef4b27 SHA256 5a60f62e45cfc5adb06d921622c4c6898859e9eb2c3c32614586ebb2b0e4fef0
-EBUILD git-python-0.3.2_rc1.ebuild 810 RMD160 703249930a37a2d23c8a8d75716d396e46e1bf62 SHA1 259895ea30e193154dccbff97b75e1fc364c514d SHA256 e2ebf615424b08c1f768665a4d57a74376e83b88ab2ec08f120936af5de00998
-MISC ChangeLog 1180 RMD160 9751ea20f37cf23ffbcb39d1ca2c141a2cd168d6 SHA1 81e976577036d84a8bfeea8336a2824f54642eb8 SHA256 49597c08a1e97abaf92c7e32e3771bafe5628f3794c8334a5eaf056ca84bc0a6
+EBUILD git-python-0.3.2_rc1.ebuild 917 RMD160 8a1408c59befc88ab510e9e806a572875e6f2ff7 SHA1 e57c0464ab2a2c98712e73c4d86da33dc4c03776 SHA256 1e72f2f69d492c3a087eac2175c62323685a9b4efbfc15f6c80bb5fc00880b82
+MISC ChangeLog 1302 RMD160 60bf42c9d20df5315dad66560b094b4b7108c98c SHA1 e353455bbb5e4a0763a88c1d7dc848ada92f6850 SHA256 8109179ec5f6b27f27ed07bb6a3b98c88d1f9b744b1c86942dde3db2d81d4b06
 MISC metadata.xml 160 RMD160 e730f96ab97c5be577a6d6d05f04990374a0dffb SHA1 2aa5e6be9c265c0e7bceb78ee9fd20df5f818e36 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.16 (GNU/Linux)
+
+iEYEARECAAYFAk5ZW2gACgkQdIssYB9vBoMMIQCfRHILDSOc2wHDZoOr8BNvlQaA
+a1UAnR4q9nCJbFWTF8wzCijqSOA9QcSA
+=C3um
+-----END PGP SIGNATURE-----
