@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/gitdb/gitdb-0.5.4.ebuild,v 1.1 2011/08/27 20:14:44 neurogeek Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/gitdb/gitdb-0.5.4.ebuild,v 1.2 2011/08/27 20:57:27 neurogeek Exp $
 
 EAPI=3
 PYTHON_DEPEND="2"
@@ -15,7 +15,7 @@ SRC_URI="mirror://pypi/${PN:0:1}/${PN}/${P}.tar.gz"
 
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="~x86"
+KEYWORDS="~amd64 ~x86"
 IUSE=""
 
 RDEPEND="dev-vcs/git"
