@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/smmap/smmap-0.8.1.ebuild,v 1.1 2011/08/27 20:05:04 neurogeek Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/smmap/smmap-0.8.1.ebuild,v 1.2 2011/08/27 20:53:54 neurogeek Exp $
 # Ebuild generated by g-pypi 0.1
 
 EAPI="3"
@@ -16,7 +16,7 @@ HOMEPAGE="http://pypi.python.org/pypi/smmap/0.8.1
 SRC_URI="mirror://pypi/${PN:0:1}/${PN}/${P}.tar.gz"
 
 LICENSE="BSD"
-KEYWORDS="~x86"
+KEYWORDS="~amd64 ~x86"
 SLOT="0"
 IUSE=""
 
