@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/smmap
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/smmap/ChangeLog,v 1.1 2011/08/27 20:05:04 neurogeek Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/smmap/ChangeLog,v 1.2 2011/08/27 20:53:54 neurogeek Exp $
+
+  27 Aug 2011; Jesus Rivero <neurogeek@gentoo.org> smmap-0.8.1.ebuild:
+  Added ~amd64 keyword
 
 *smmap-0.8.1 (27 Aug 2011)
 
