@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/async
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/async/ChangeLog,v 1.1 2011/08/27 20:11:03 neurogeek Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/async/ChangeLog,v 1.2 2011/08/27 20:55:38 neurogeek Exp $
+
+  27 Aug 2011; Jesus Rivero <neurogeek@gentoo.org> async-0.6.1.ebuild:
+  Added ~amd64 keyword
 
 *async-0.6.1 (27 Aug 2011)
 
